# mpstab

./: .gitignore  LICENSE  Makefile  README.md  TESTING_DOCUMENTATION.md  TODO.md  debug_floquet.py  floquet.py  main.py  mitigation_run.py  parse_one_and_execute.py  pyproject.toml  run_cdr.sh  run_floquet.sh  run_tncdr.sh  test_entropies_calculation.py  test_partitioning.py  test_pauli.py  test_simple_circuit.py  test_tn.py  test_w_circuit.ipynb  tn_notebook.ipynb
.github/: codecov.yml
.github/workflows/: docs.yml  tests.yml
benchmarks/: benchmark_results.csv  manual_run.sh  run.sh  run_configuration.py  run_configuration.sh  run_many_configs.sh  run_quimb_bench.sh  run_small.sh  run_stim.sh  run_tn.sh  run_tn_small.sh  sweep_bd.sh  sweep_repl_prob.sh  test_commutator.py  test_nruns_mpstab_quimb.py  test_quimb_mpstab_values.py  test_stim_mpstab.py
benchmarks/plotscripts/: plot_matrices.py  plot_mpstab_quimb.py  plot_multi_results.py  plot_sweep_bd.py  plot_sweep_repl_prob.py
docs/: conf.py  index.rst  installation.md  installation.rst
docs/api/: engines.rst  evolutors.rst  models.rst
docs/examples/: dmrg_optimization_heisenberg.ipynb  introduction.ipynb
docs/guides/: dmrg_optimization.rst  fidelity_and_approximation.rst  qibo_backend_provider.rst  quickstart.rst  theory_background.rst  using_ansatze.rst  working_with_engines.rst
examples/: 20q_2l.out  20q_5l.out  30q_2l.out  50q_2l.out  50q_5l.out  check_expvals.py  dmrg_j1j2_comparison.py  hybrid_surrograte.ipynb  hybrid_surrograte_performances.ipynb  introduction.ipynb  load_circuits_and_run.py  nohup.out  old_nohup.out  optimization.ipynb  out.10q1l  out.10q1lwt  out.19q2l  out.19q2lwt  out.20q1l  out.20q1lwt  out.25q2l  out.25q2lwt  out.41q2l  out.51q2l  out.5q2l  out.5q2lwt  parse_circuits_and_run.py  process_hardware_results.ipynb  result_tncdr.json  setup_W_tn.ipynb  tn_notebook.ipynb  tncdr.py  transpiled_target.ipynb
examples/10q_1l/: config.json
examples/10q_1l/circuits/: original_circuit_params.npy  params_circuit0.npy  params_circuit1.npy  params_circuit10.npy  params_circuit11.npy  params_circuit12.npy  params_circuit13.npy  params_circuit14.npy  params_circuit15.npy  params_circuit16.npy  params_circuit17.npy  params_circuit18.npy  params_circuit19.npy  params_circuit2.npy  params_circuit3.npy  params_circuit4.npy  params_circuit5.npy  params_circuit6.npy  params_circuit7.npy  params_circuit8.npy  params_circuit9.npy
examples/10q_1l/results/: run_metadata.json  tncdr_results_twirlFalse.json  tncdr_results_twirlTrue.json
examples/19q_2l/: config.json
examples/19q_2l/circuits/: original_circuit_params.npy  params_circuit0.npy  params_circuit1.npy  params_circuit10.npy  params_circuit11.npy  params_circuit12.npy  params_circuit13.npy  params_circuit14.npy  params_circuit15.npy  params_circuit16.npy  params_circuit17.npy  params_circuit18.npy  params_circuit19.npy  params_circuit2.npy  params_circuit3.npy  params_circuit4.npy  params_circuit5.npy  params_circuit6.npy  params_circuit7.npy  params_circuit8.npy  params_circuit9.npy
examples/19q_2l/results/: run_metadata.json  tncdr_results_twirlFalse.json  tncdr_results_twirlTrue.json
examples/20q_1l/: config.json
examples/20q_1l/circuits/: original_circuit_params.npy  params_circuit0.npy  params_circuit1.npy  params_circuit10.npy  params_circuit11.npy  params_circuit12.npy  params_circuit13.npy  params_circuit14.npy  params_circuit15.npy  params_circuit16.npy  params_circuit17.npy  params_circuit18.npy  params_circuit19.npy  params_circuit2.npy  params_circuit3.npy  params_circuit4.npy  params_circuit5.npy  params_circuit6.npy  params_circuit7.npy  params_circuit8.npy  params_circuit9.npy
examples/20q_1l/results/: run_metadata.json  tncdr_results_twirlFalse.json  tncdr_results_twirlTrue.json
examples/20q_2l/: config.json
examples/20q_2l/circuits/: original_circuit_params.npy  params_circuit0.npy  params_circuit1.npy  params_circuit10.npy  params_circuit100.npy  params_circuit101.npy  params_circuit102.npy  params_circuit103.npy  params_circuit104.npy  params_circuit105.npy  params_circuit106.npy  params_circuit107.npy  params_circuit108.npy  params_circuit109.npy  params_circuit11.npy  params_circuit110.npy  params_circuit111.npy  params_circuit112.npy  params_circuit113.npy  params_circuit114.npy  params_circuit115.npy  params_circuit116.npy  params_circuit117.npy  (+478 more)
examples/20q_5l/: results.json
examples/21q_2l/: config.json
examples/25q_2l/: config.json
examples/30q_2l/: results.json
examples/30q_5l/: config.json
examples/41q_2l/: config.json
examples/50q_2l/: results.json
examples/50q_5l/: config.json
examples/51q_2l/: config.json
examples/5q_2l/: config.json
examples/circuits/: params_circuit1.npy  params_circuit4.npy  params_circuit5.npy  params_circuit9.npy  results.json
examples/old_res/: nohup.out  old_result_tncdr.json  result_tncdr.json
numerics/: entanglemet_growth.py  mpo.py  mps.py  mps_gates.py  plots.ipynb  stab_mps.py
src/mpstab/: __init__.py
src/stabilizer_mps/: graph.py  pauli_string.py  random.py  tableaus.py  tensor_network.py  test_pauli.py  test_tn.py
src/tncdr/: main.py
src/tncdr/evolutors/tensor_network/: CMakeLists.txt  __init__.py  bindings.cpp  c_tensor_network.cpp  c_tensor_network.h  circuit_mps.py  s_utils.py  tensor_network.py  tn_utils.py  utils.py  w_utils.py
src/tncdr/evolutors/tensor_network/operators/: __init__.py  gates.py  mpo.py  observables.py  utils.py
src/tncdr/evolutors/tensor_network/simulator/: __init__.py  circuit_mps.py  circuit_stab_mps.py
tests/: test_backends_interface.py  test_backends_stabilizers.py  test_backends_support.py  test_caching.py  test_cdr.py  test_compute_fidelity.py  test_entropies_calculation.py  test_hybrid_evolutor.py  test_optimization.py  test_partitioning.py  test_pauli.py  test_pure_clifford_circuits.py  test_qibo_backend_providing.py  test_quimb_backends_support.py  test_rst_code_blocks.py  test_simple_circuit.py  test_stabilizers.py  test_surrogate_expectation.py  test_tn.py  test_tncdr.py  test_w_circuit.ipynb  utils.py
(+3282 files in other folders)
