[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mpstab"
version = "0.0.1"
description = "Hybrid stabilizers - tensor network simulator for quantum circuits"
authors = ["Matteo Robbiati", "Giulio Crognaletti", "Mattia Robbiano", "Michele Grossi"]
readme = "README.md"
repository = "https://github.com/MatteoRobbiati/mpstab/"
packages = [{ include = "mpstab", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "^2.0.0"
qibo = "^0.2.19"
click = "^8.1.0"
matplotlib = "^3.10.0"
stim = "^1.15.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.3.0"
furo = "^2023.3.27"
sphinxcontrib-bibtex = "^2.5.0"
sphinx-copybutton = "^0.5.2"
sphinxcontrib-katex = "^0.9.9"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^7.34"
pdbpp = "^0.10.3"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^7.2.1"
pylint = "3.1.0"
pytest-cov = "4.0.0"

[tool.poetry.group.benchmark.dependencies]
pytest-benchmark = { version = "^4.0.0", extras = ["histogram"] }

[tool.poe.tasks]
bench = "pytest benchmarks/"
test = "pytest"
lint = "pylint src/**/*.py -E"
lint-warnings = "pylint src/**/*.py --exit-zero"
docs = "make -C doc html"
docs-clean = "make -C doc clean"
test-docs = "make -C doc doctest"

[tool.pytest.ini_options]
testpaths = ['tests/', 'benchmarks/']
python_files = ['test_*.py', 'bench_*.py']
python_classes = ['Test*', 'Benchmark*']
python_functions = ['test_*', 'bench_*']
addopts = [
  "--benchmark-warmup=on",
  "--benchmark-warmup-iterations=100000",
  "--benchmark-disable-gc",
  "--benchmark-histogram=bench-hists/bench",
  '--cov=mpstab',
  '--cov-append',
  '--cov-report=xml',
  '--cov-report=html',
  '--durations=60',
]
